@@ -16,6 +16,15 @@
   <url type="bugtracker">https://github.com/mike-fabian/ibus-typing-booster/issues</url>
   <url type="help">https://mike-fabian.github.io/ibus-typing-booster/documentation.html</url>
   <releases>
+    <release version="1.5.13" date="2016-11-20" urgency="medium">
+      <description>
+        <ul>
+          <li>
+            Update French translation from zanata
+          </li>
+        </ul>
+      </description>
+    </release>
     <release version="1.5.12" date="2016-11-19" urgency="medium">
       <description>
         <ul>
