@@ -1,4 +1,8 @@
 * Author: Mike FABIAN <mfabian@redhat.com>
+* 20 Nov 2016 Released 1.5.13 version
+* Update French translations from zanata
+
+* Author: Mike FABIAN <mfabian@redhat.com>
 * 19 Nov 2016 Released 1.5.12 version
 * Display existing shortcuts and make it possible to delete them
 * Update translations from zanata (de, pl, uk)
